--- a/Day11/index.html
+++ b/Day11/index.html
@@ -1,21 +1,320 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Properties Example</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>CSS Demonstration — Text, Font, Background</title>
+
+  <!--
+    Single-file demo showing text, font, and background CSS properties.
+    Includes comments and small examples for each property category.
+  -->
+  <style>
+    /* ---------- Page layout & basic reset ---------- */
+    :root{
+      --accent: #1e90ff;
+      --muted: #6b7280;
+      --card-bg: #ffffff;
+      --page-bg: linear-gradient(180deg,#f8fbff 0%, #eef6ff 100%);
+      --max-width: 1000px;
+      --radius: 12px;
+      --shadow: 0 8px 24px rgba(18,38,63,0.08);
+    }
+
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{
+      font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: var(--page-bg);
+      color: #0f172a;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      display:flex;
+      align-items:flex-start;
+      justify-content:center;
+      padding:40px 20px;
+      line-height:1.45;
+    }
+
+    .wrap{
+      width:100%;
+      max-width: var(--max-width);
+      background: rgba(255,255,255,0.9);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:28px;
+      gap:20px;
+      display:grid;
+      grid-template-columns: 1fr 360px;
+      align-items:start;
+    }
+
+    /* ---------- Left column: examples ---------- */
+    .content{
+      padding-right:18px;
+    }
+
+    h1.page-title{
+      font-size:28px;
+      margin-bottom:8px;
+      letter-spacing: -0.5px;
+    }
+    p.lead{ color:var(--muted); margin-bottom:18px; }
+
+    section.card{
+      background: var(--card-bg);
+      border-radius:10px;
+      padding:18px;
+      margin-bottom:18px;
+      box-shadow: 0 4px 14px rgba(16,24,40,0.04);
+      border:1px solid rgba(15,23,42,0.03);
+    }
+    section.card h2{
+      font-size:18px;
+      margin-bottom:12px;
+    }
+    .example{
+      padding:12px;
+      border-radius:8px;
+      background: linear-gradient(180deg, rgba(30,144,255,0.04), rgba(30,144,255,0.02));
+      border: 1px dashed rgba(30,144,255,0.12);
+    }
+    .example + .example { margin-top:10px; }
+
+    /* ---------- Text properties examples ---------- */
+    .txt-color{ color: #0b6ef6; }               /* color */
+    .txt-align-center{ text-align:center; }     /* text-align */
+    .txt-decoration{ text-decoration: underline dotted #0b6ef6 2px; } /* text-decoration */
+    .txt-transform{ text-transform: uppercase; }/* text-transform */
+    .txt-lineheight{ line-height: 2; }          /* line-height */
+    .txt-letter{ letter-spacing: 3px; }         /* letter-spacing */
+    .txt-word{ word-spacing: 8px; }             /* word-spacing */
+    .txt-shadow{ text-shadow: 2px 2px 4px rgba(0,0,0,0.12); } /* text-shadow */
+
+    /* ---------- Font properties examples ---------- */
+    .font-family-slab{ font-family: "Georgia", "Times New Roman", serif; }
+    .font-family-mono{ font-family: "Courier New", ui-monospace, SFMono-Regular, monospace; }
+    .font-size-xxl{ font-size: 2rem; }           /* font-size */
+    .font-size-sm{ font-size: 0.85rem; }
+    .font-style-italic{ font-style: italic; }   /* font-style */
+    .font-weight-700{ font-weight: 700; }       /* font-weight */
+    .font-variant-smallcaps{ font-variant: small-caps; } /* font-variant */
+
+    /* ---------- Background properties examples ---------- */
+    .bg-solid{ background-color: #fef3c7; } /* background-color */
+    .bg-gradient{
+      background: linear-gradient(135deg, rgba(30,144,255,0.12), rgba(34,197,94,0.08));
+    }
+    /* background-image using an inline SVG data-URL (no external file) */
+    /* .bg-pattern{
+      background-image: url("data:image/svg+xml;utf8,\
+        <svg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 24 24'>\
+          <circle cx='6' cy='6' r='2' fill='%230b6ef6' opacity='0.12'/>\
+          <circle cx='18' cy='18' r='2' fill='%230b6ef6' opacity='0.12'/>\
+        </svg>");
+      background-repeat: repeat;
+      background-position: top left;
+      background-size: 120px 120px;
+    } */
+    .bg-cover{
+      /* using gradient to simulate big image that covers */
+      background-image: radial-gradient(circle at 20% 30%, rgba(255,165,0,0.12), transparent 20%),
+                        radial-gradient(circle at 80% 70%, rgba(30,144,255,0.12), transparent 18%);
+      background-size: cover;
+    }
+    .bg-fixed{
+      background-attachment: fixed;
+    }
+
+    /* ---------- Right column: cheat sheet ---------- */
+    .cheats{
+      padding-left:8px;
+      display:flex;
+      flex-direction:column;
+      gap:12px;
+    }
+    .cheats pre{
+      white-space:pre-wrap;
+      font-family: ui-monospace, SFMono-Regular, "Segoe UI Mono", "Roboto Mono", monospace;
+      font-size:13px;
+      background:#0f172a;
+      color:#f8fafc;
+      padding:10px;
+      border-radius:8px;
+      box-shadow: inset 0 -2px 0 rgba(255,255,255,0.02);
+      overflow:auto;
+    }
+
+    footer.note{
+      grid-column:1 / -1;
+      text-align:center;
+      color:var(--muted);
+      font-size:13px;
+      margin-top:6px;
+    }
+
+    /* responsive */
+    @media (max-width:980px){
+      .wrap{ grid-template-columns: 1fr; padding:18px;}
+      .cheats{ padding-left:0; }
+    }
+  </style>
 </head>
 <body>
+  <main class="wrap" role="main">
+    <div class="content">
+      <h1 class="page-title">CSS properties: Text · Font · Background</h1>
+      <p class="lead">Examples below show common properties you will use often. Each example is annotated by the class name used.</p>
 
-  <h1>CSS Properties Demonstration</h1>
+      <!-- ---------- TEXT PROPERTIES ---------- -->
+      <section class="card" aria-labelledby="text-props">
+        <h2 id="text-props">Text properties</h2>
 
-  <p>
-    this is a paragraph showing text properties such as alignment, text shadow, 
-    spacing, and decoration. notice how the words are capitalized, 
-    the letters are spaced apart, and the background image is fixed while scrolling. 
-    css makes web pages look beautiful.
-  </p>
+        <div class="example txt-color">
+          <strong>color:</strong> Sets the text color. (<em>class</em> <code>.txt-color</code>)<br>
+          This paragraph uses the <code>color</code> property to make text blue.
+        </div>
 
+        <div class="example txt-align-center">
+          <strong>text-align:</strong> Align text horizontally. (<em>class</em> <code>.txt-align-center</code>)<br>
+          This block is centered using <code>text-align:center</code>.
+        </div>
+
+        <div class="example txt-decoration">
+          <strong>text-decoration:</strong> Underline, overline, strike-through or dotted/ wavy styles.<br>
+          Here we used a dotted underline and changed its color/ thickness.
+        </div>
+
+        <div class="example txt-transform">
+          <strong>text-transform:</strong> change case. (<em>class</em> <code>.txt-transform</code>)<br>
+          THIS TEXT IS UPPERCASE USING <code>text-transform: uppercase</code>.
+        </div>
+
+        <div class="example txt-lineheight">
+          <strong>line-height:</strong> The space between lines. (<em>class</em> <code>.txt-lineheight</code>)<br>
+          This paragraph uses a larger line-height to improve readability for blocks of text.
+        </div>
+
+        <div class="example txt-letter">
+          <strong>letter-spacing:</strong> Space between letters. (<em>class</em> <code>.txt-letter</code>)<br>
+          THIS TEXT HAS MORE GAP BETWEEN CHARACTERS.
+        </div>
+
+        <div class="example txt-word">
+          <strong>word-spacing:</strong> Space between words. (<em>class</em> <code>.txt-word</code>)<br>
+          Words   are   spaced   further   apart   here.
+        </div>
+
+        <div class="example txt-shadow">
+          <strong>text-shadow:</strong> Adds shadow to text for depth. (<em>class</em> <code>.txt-shadow</code>)<br>
+          Subtle shadow improves contrast on pale backgrounds.
+        </div>
+      </section>
+
+      <!-- ---------- FONT PROPERTIES ---------- -->
+      <section class="card" aria-labelledby="font-props">
+        <h2 id="font-props">Font properties</h2>
+
+        <div class="example font-family-slab">
+          <strong>font-family:</strong> Choose font stack. (<em>class</em> <code>.font-family-slab</code>)<br>
+          This sample uses a serif stack (Georgia, Times).
+        </div>
+
+        <div class="example font-family-mono">
+          <strong>monospace fonts:</strong> Useful for code and aligned text. (<em>class</em> <code>.font-family-mono</code>)<br>
+          Monospace text keeps fixed character widths.
+        </div>
+
+        <div class="example font-size-xxl">
+          <strong>font-size:</strong> Control text size. (<em>class</em> <code>.font-size-xxl</code>)<br>
+          Larger font for headings or important calls-to-action.
+        </div>
+
+        <div class="example font-style-italic font-weight-700">
+          <strong>font-style & font-weight:</strong> Italic vs bold. (<em>classes</em> <code>.font-style-italic</code>, <code>.font-weight-700</code>)<br>
+          Use <code>font-style</code> for emphasis and <code>font-weight</code> for visual weight.
+        </div>
+
+        <div class="example font-variant-smallcaps">
+          <strong>font-variant:</strong> Small-caps (typographic effect). (<em>class</em> <code>.font-variant-smallcaps</code>)<br>
+          Small-caps present a formal typographic style.
+        </div>
+      </section>
+
+      <!-- ---------- BACKGROUND PROPERTIES ---------- -->
+      <section class="card" aria-labelledby="bg-props">
+        <h2 id="bg-props">Background properties</h2>
+
+        <div class="example bg-solid">
+          <strong>background-color:</strong> Solid background. (<em>class</em> <code>.bg-solid</code>)<br>
+          Use to create contrast behind text (accessibility tip: ensure sufficient contrast).
+        </div>
+
+        <div class="example bg-gradient">
+          <strong>background (gradient):</strong> Smooth color transitions. (<em>class</em> <code>.bg-gradient</code>)<br>
+          Great for soft visual accents.
+        </div>
+
+        <div class="example bg-pattern">
+          <strong>background-image + repeat + position + size:</strong> Patterned backgrounds using SVG data-URL. (<em>class</em> <code>.bg-pattern</code>)<br>
+          Data-URL avoids external images and is useful in single-file demos.
+        </div>
+
+        <div class="example bg-cover bg-fixed">
+          <strong>background-size: cover / background-attachment: fixed</strong><br>
+          Use <code>cover</code> to ensure large background covers container; <code>fixed</code> creates parallax-like effect.
+        </div>
+      </section>
+
+      <footer class="note">
+        Tip: combine these properties to craft readable, attractive UI — always check color contrast for accessibility.
+      </footer>
+    </div>
+
+    <!-- ---------- Right column: cheat-sheet ---------- -->
+    <aside class="cheats" aria-label="cheat sheet">
+      <section class="card">
+        <h2>Cheat sheet</h2>
+        <pre>
+/* Text */
+color: #0b6ef6;
+text-align: center;
+text-decoration: underline dotted;
+text-transform: uppercase;
+line-height: 1.6;
+letter-spacing: 2px;
+text-shadow: 2px 2px 4px rgba(0,0,0,0.12);
+
+/* Font */
+font-family: "Inter", system-ui, sans-serif;
+font-size: 16px;  /* px, em, rem, % */
+font-style: italic;
+font-weight: 700;
+font-variant: small-caps;
+
+/* Background */
+background-color: #f7f7f7;
+background-image: url('image.jpg');
+background-repeat: no-repeat;
+background-position: center center;
+background-size: cover;
+background-attachment: fixed;
+
+/* Shorthand */
+background: linear-gradient(#fff, #eee) no-repeat center/cover;
+        </pre>
+      </section>
+
+      <section class="card">
+        <h2>Accessibility tips</h2>
+        <ul style="color:var(--muted); font-size:14px; line-height:1.5;">
+          <li>Ensure text contrast >= WCAG AA (use contrast checker).</li>
+          <li>Prefer relative font sizes (rem) for scalability.</li>
+          <li>Avoid using only color to communicate meaning.</li>
+          <li>Use <code>line-height</code> & spacing for readability on mobile.</li>
+        </ul>
+      </section>
+    </aside>
+  </main>
 </body>
 </html>
