--- a/day9/index.html
+++ b/day9/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Introduction, Types & Selectors</title>
+  <title>CSS Introduction, Types</title>
   <link rel="stylesheet" href="./style.css">
   <style>
     p {
