--- a/Day11/index.html
+++ b/Day11/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>CSS Demonstration — Text, Font, Background</title>
+  <title>CSS -Text, Font, Background</title>
 
   <!--
     Single-file demo showing text, font, and background CSS properties.
